# industrial-request-intelligence-platform

./: .gitignore  README.md  coin.txt  coinciencias.txt  coinfront.txt  docker-compose.yml
backend/: .env.example  .env.local.example  .env.test  .env.test.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260312_0001_create_organizations.py  20260312_0002_create_users_and_organization_memberships.py  20260312_0003_harden_membership_roles.py  20260312_0004_create_requests.py  20260312_0005_create_request_activities.py  20260312_0006_create_documents.py  20260312_0007_create_document_processing_results.py  20260312_0008_add_user_password_hash.py  20260312_0009_add_document_verified_data.py  20260313_0012_create_request_status_history.py  20260313_0013_extend_organization_memberships.py  20260314_0014_create_customers_and_link_requests.py  20260316_0015_harden_request_status_history_tenant_fk.py  20260316_0016_add_request_status_history_actor_user.py  20260316_0017_add_request_updated_activity.py  20260323_0018_harden_api_auth_and_request_indexes.py  20260323_0019_create_auth_sessions.py  20260405_0020_create_document_processing_jobs.py
backend/app/: main.py
backend/app/core/: __init__.py  settings.py
backend/app/interfaces/: __init__.py
backend/app/workers/: __init__.py  document_worker.py
backend/industrial_request_intelligence_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  settings.py  test_app.py  test_health.py
(+302 files in other folders)
